<?xml version="1.0" encoding="utf-8"?>
<!--
Abstract :

Preferences for Stephe's Music Player.
Copyright (C) 2011, 2024 Stephen Leake.  All Rights Reserved.

This program is free software; you can redistribute it and/or
modify it under terms of the GNU General Public License as
published by the Free Software Foundation; either version 3, or
(at your option) any later version. This program is distributed in
the hope that it will be useful, but WITHOUT ANY WARRANTY; without
even the implied warranty of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU General Public License for more
details. You should have received a copy of the GNU General Public
License distributed with this program; see file COPYING. If not,
write to the Free Software Foundation, 51 Franklin Street, Suite
500, Boston, MA 02110-1335, USA.
-->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.preference.PreferenceCategory
      app:title="all">

    <androidx.preference.EditTextPreference
        android:key="@string/slide_duration_key"
        android:defaultValue="@string/slide_duration_default"
        android:numeric="integer"
        android:title="@string/slide_duration_title"
        android:summary="@string/slide_duration_summary"
        android:dialogTitle="@string/slide_duration_dialog_title" />

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
