<?xml version="1.0" encoding="utf-8"?>
<!--
  Abstract :

  Main menu for Stephe's slide show

  Copyright (C) 2025 Stephen Leake.  All Rights Reserved.

  This program is free software; you can redistribute it and/or
  modify it under terms of the GNU General Public License as
  published by the Free Software Foundation; either version 3, or
  (at your option) any later version. This program is distributed in
  the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  PARTICULAR PURPOSE. See the GNU General Public License for more
  details. You should have received a copy of the GNU General Public
  License distributed with this program; see file COPYING. If not,
  write to the Free Software Foundation, 51 Franklin Street, Suite
  500, Boston, MA 02110-1335, USA.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@id/menu_open"
      android:title="@string/menu_open"/>
  <item
      android:id="@id/menu_go"
      android:title="@string/menu_go"/>
  <item
      android:id="@id/menu_preferences"
      android:title="@string/menu_preferences"/>
</menu>
